--- a/templateOAuth/resultat.html
+++ b/templateOAuth/resultat.html
@@ -21,6 +21,9 @@
     </div>
     <div class="container">
         <div class="row">
+            <a class="waves-effect waves-light btn" onClick="{() => {navigator.clipboard.writeText(`{{.JwtProduce }}`)}}" >
+                <i class="material-icons left">content_copy</i>
+            </a>
             <div class="light-blue lighten-5 col s5">
                 <span style="width:300px; word-wrap:break-word; display:inline-block;">
                     {{.JwtProduce }}
